# qmlsoundeffectandroid

./: CMakeLists.txt  main.cpp  main.qml
